Logins now open in a new window
This isn't ideal because the window quickly closes if you're already
logged into the provider's site and have already approved our app, but
it works.  Just need to add test coverage.

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,6 +5,6 @@
     %li== Logged into #{current_user.provider} as #{current_user.name} (#{current_user.uid})
     %li= link_to "Logout", logout_path
   - else
-    %li= link_to "Login as OmniAuth Developer", omniauth_login_path(:developer)
-    %li= link_to "Login with Facebook",         omniauth_login_path(:facebook)
-    %li= link_to "Login with Twitter",          omniauth_login_path(:twitter)
+    %li= link_to "Login as OmniAuth Developer", omniauth_login_path(:developer),                   :class => "popup"
+    %li= link_to "Login with Facebook",         omniauth_login_path(:facebook) + "?display=popup", :class => "popup"
+    %li= link_to "Login with Twitter",          omniauth_login_path(:twitter),                     :class => "popup"
